# GTK-Recipe-Organizer

./: CMakeLists.txt  README.md  RecipeOrganizer
src/: database.db  main.c  search.c  theme.css
src/includes/gtk/: gtkversion.h
